# CopyCurve

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  code-of-conduct.md  update-deps-images.sh
CMake/Modules/: Coverage.cmake  SetupCatch.cmake  SetupCluon.cmake  SetupOCV.cmake
CMake/Scripts/: DoBuild.cmake  RunTestsuite.cmake
Docker/debian/: Dockerfile.builder:latest  Dockerfile.cmake:3.20.0  Dockerfile.rt-base:latest  cmake:3.20.0.mksh
include/: cone-detection.hxx  copy-curve.hxx  steering-calculation.hxx  stub-compute.hxx  stub-engine.hxx  util.hxx
include/cluon/: cluon-engine.hxx
include/scaffolding/: frame.hxx  scaffolding.hxx
src/: cone-detection.cxx  main.cxx  steering-calculation.cxx  stub-compute.cxx  stub-engine.cxx
src/cluon/: cluon-engine.cxx
test/: CMakeLists.txt  cluon.cxx  make_graphs.sh  res.plot  sanity.cxx  stubs.cxx
